Fix user contact info text color on dark mode

--- a/src/app/components/user-data/components/user-contact-info/user-contact-info.component.scss
+++ b/src/app/components/user-data/components/user-contact-info/user-contact-info.component.scss
@@ -26,6 +26,19 @@
     }
 }
 
+.darkMode {
+    background-color: v.$Dark-Blue;
+    color: v.$White;
+}
+
+.darkMode-stats {
+    background-color: v.$Very-Dark-Blue;
+}
+
+.darkModeText {
+    color: v.$White;
+}
+
 @media screen and (min-width: 768px) {
     .contact-info {
         display: grid;
